--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,300&family=Pacifico&display=swap" rel="stylesheet">
         <title>
-            CSS Try
+            Personal CV
         </title>
     </head>
     <body>
